immutable-processor/src/test/resources/test/type/error/Class.java
package test.type.error;

import org.example.immutable.Immutable;

@Immutable
public class Class {}
